# ros_costmap_to_svg

./: CMakeLists.txt  package.xml
data/: base_cmaps.bag
data/final/: map.css
data/final/tb3/: map.pgm  map.yaml
data/maps/: tata_7thmarch_long.yaml
launch/: pub_map.launch  pub_map_tata.launch
map_server/: map_server.py
scripts/: map_to_primatives.py  map_to_primatives_svg.py  map_to_svg.py  pub_cmaps.py
srv/: FinishEditing.srv  ListMaps.srv  SetMap.srv  StartEditing.srv  finish_editing.srv  finish_map_edit.srv  start_map_edit.srv
